# restaurant-management-system

./: .env  App.js  add_sample_data.py  alembic.ini  alert_service.py  app.py  attendance.db  backup_service.py  cache_service.py  config.py  create_admin.py  employee_window.py  erp_system.py  extensions.py  init_admin_password.py  middleware.ts  migrations.py  models.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  restaurant.db  restaurant.db-journal  schedule_analysis.py  security.py  server.mjs  server.py  test_api.py  test_hash.py  test_password.py  tsconfig.json  update_admin_password.py
app/: globals.css  layout.tsx  loading.tsx  page.tsx
backups/: db_backup_20250504_134250.sql
components/: AdminSettings.tsx  NotificationList.tsx  employee-cards.tsx  employee-detail.tsx  employee-list.tsx  employee-table.tsx  navbar.tsx  theme-toggle.tsx
data/: users.json
docs/: github_actions_setup.md
instance/: restaurant.db
lib/: socket.ts  supabase.ts  utils.ts
logs/: restaurant.log.1  restaurant_system.log.1  restaurant_system.log.10  restaurant_system.log.5  restaurant_system_new.log.1
models/: __init__.py  attendance.py  attendance.ts  contract.py  employee.py  inventory.py  menu.ts  notification.py  order.py  order.ts  recipe.py  schedule.py  supplier.py  user.py  work_evaluation.py
prisma/: schema.prisma
public/: index.html
routes/: admin.py  analysis.py  auth.py  contracts.py  dashboard.py  employee.py  employees.py  feedback.py  inventory.py  main.py  notification.py  order.py  orders.py  schedule.py  (+3 more)
(+247 files in other folders)
