[project]
name = "restaurant_system"
version = "1.0.0"
description = "레스토랑 관리 시스템"
requires-python = ">=3.13.2,<3.14"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.0.5",
    "python-dotenv>=1.0.0",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
multi_line_output = 3 